--- a/Calculator.html
+++ b/Calculator.html
@@ -8,40 +8,48 @@
     <style>
         .calculatrice {
             margin: 3% auto;
-            background-color: #E5E5E5;
-            border-radius: 8px;
-            padding: 20px;
-            width: 300px;
+            background-color: #EFEFF0;
+            border-radius: 12px;
+            padding: 16px;
+            width: 320px;
             text-align: center;
         }
 
         .calculatrice input[type="text"] {
             width: 100%;
-            height: 50px;
+            height: 60px;
             font-size: 24px;
             text-align: right;
             background-color: #ffffff;
-            border: 1px solid #E5E5E5;
+            border: 1px solid #EFEFF0;
             border-radius: 8px;
             padding: 10px;
             margin-bottom: 20px;
             box-sizing: border-box;
         }
 
-        .calculatrice input[type="button"] {
+        .calculatrice input[type="button"],
+        .calculatrice button {
             background-color: #ffffff;
-            border-radius: 8px;
+            border-radius: 12px;
             border: none;
             font-size: 20px;
             width: 60px;
             height: 50px;
-            margin: 5px;
-            transition: 0.14s;
+            margin: 6px;
+            transition: all 0.16s;
             cursor: pointer;
         }
 
-        .calculatrice input[type="button"]:hover {
-            background-color: #CECECE;
+        .calculatrice input[type="button"]:hover,
+        .calculatrice button:hover {
+            background-color: #D7D7D8;
+            transform: translateY(-2px);
+        }
+
+        .calculatrice input[type="button"]:active,
+        .calculatrice button:active {
+            transform: translateY(0px);
         }
 
         .calculatrice input[type="button"].operator {
@@ -72,17 +80,27 @@
         }
 
         .a {
-            position: relative;
-            top: 46px;
-            font-weight: bold;
-            color: #333;
+            background-color: #EFEFF0;
+            display: inline-block;
+            font-weight: 500;
+            color: black;
             text-decoration: none;
-            padding: 6px;
-            transition: 0.14s;
+            padding: 8px 12px;
+            margin: 8px 12px;
+            border-radius: 8px;
+            margin-right: 16px;
+            transition: all 0.16s;
         }
 
         .a:hover {
-            color: #28A745;
+            color: rgb(0, 10, 200);
+            background-color: #e0e0ff;
+            transform: translateY(-2px);
+        }
+
+
+        .a:active {
+            transform: translateY(0);
         }
     </style>
 </head>
