--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -10,27 +10,12 @@
             border: 1px solid black;
         }
 
-        a {
-            font-weight: bold;
-            color: black;
-            text-decoration: none;
-            padding: 6px;
-            margin-right: 16px;
-            transition: 0.14s;
-        }
-
-        a:hover {
-            box-shadow: 0 0 2px rgba(0, 0, 0);
-            border-radius: 8px;
-            color: rgb(0, 10, 200);
-        }
-
         .all-circle {
             margin: 20px auto;
             width: 85%;
             padding: 20px;
             border-radius: 8px;
-            background-color: #E5E5E5;
+            background-color: #EFEFF0;
         }
 
         .circle {
@@ -44,7 +29,7 @@
             text-align: center;
             font-weight: bolder;
             transition: 0.14s;
-            background-color: #CECECE;
+            background-color: #D7D7D8;
         }
 
         .circle:hover {
@@ -697,6 +682,30 @@
             background-color: #000000;
             color: white;
         }
+
+        .a {
+            background-color: #fff;
+            display: inline-block;
+            font-weight: 500;
+            color: black;
+            text-decoration: none;
+            padding: 8px 12px;
+            margin: 8px 12px;
+            border-radius: 8px;
+            margin-right: 16px;
+            transition: all 0.16s;
+        }
+
+        .a:hover {
+            color: rgb(0, 10, 200);
+            background-color: #e0e0ff;
+            transform: translateY(-2px);
+        }
+
+
+        .a:active {
+            transform: translateY(0);
+        }
     </style>
 </head>
 
@@ -895,7 +904,7 @@
         <div class="circle SlateGray">SlateGray</div>
         <div class="circle DarkSlateGray">DarkSlateGray</div>
         <div class="circle Black">Black</div>
-        <center><a href="Couleurs And Code.html">Back</a>
+        <center><a href="Couleurs And Code.html" class="a">Back</a>
         </center>
     </div>
 </body>
