--- a/index.html
+++ b/index.html
@@ -268,15 +268,25 @@
                 </div>
             </div>
             <div class="app-info"
-            onclick="window.location.href='https://drive.google.com/file/d/1IFl5SdbYelr1bl9SwR_zpjLAw_NZFlaa/view?usp=drive_link';">
-            <div class="app-icon">
-                <img src="ase.webp" alt="LogoIYR5" width="100px" height="100px"
-                    onerror="this.onerror=null; this.src='EmptyApp.svg';">
+                onclick="window.location.href='https://drive.google.com/file/d/1IFl5SdbYelr1bl9SwR_zpjLAw_NZFlaa/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="ase.webp" alt="LogoIYR5" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
+                </div>
+                <div class="app-name">
+                    <h1>Aseprite</h1>
+                </div>
             </div>
-            <div class="app-name">
-                <h1>Aseprite</h1>
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/1h3Ra33H646_rpk66PlN2hOf4ZcRR0uT0/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="LosslessScaling.webp" alt="LogoIYR5" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
+                </div>
+                <div class="app-name">
+                    <h1>Lossless Scaling</h1>
+                </div>
             </div>
-        </div>
         </div>
     </div>
 </body>
