Add SpaceOpen X,O Calc Login

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <body>
     <div class="header">
-        <h2><span style="color: white;">IYR</span></h2>
+        <h2><span style="color: white;"> </span></h2>
         <div class="menu">
             <a href="index.html">
                 Home</a>
@@ -248,13 +248,13 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1wTRr_tvE3q9eFCNulK8fOcwVJ1Azfq6l/view?usp=drive_link';">
+                onclick="window.location.href='https://drive.google.com/file/d/1YuwpVn0u5wc9X5mv_dsOu-TN477eSCJw/view?usp=drive_link';">
                 <div class="app-icon">
                     <img src="cstrike.webp" alt="LogoIYR3" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
-                    <h1>Counter-Strike 1.6</h1>
+                    <h1>Counter-Strike1.6</h1>
                 </div>
             </div>
             <div class="app-info"
@@ -285,6 +285,16 @@
                 </div>
                 <div class="app-name">
                     <h1>Lossless Scaling</h1>
+                </div>
+            </div>
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/1HVhZaIkImeksy6-Jmg1uPIky4XgbDuh3/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="Yed Games.webp" alt="LogoIYR6" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='';">
+                </div>
+                <div class="app-name">
+                    <h1>SpaceOpen</h1>
                 </div>
             </div>
         </div>
