Some PRoblem with LOGO12354566

--- a/Couleurs And Code.html
+++ b/Couleurs And Code.html
@@ -22,8 +22,7 @@
             background-color: #D7D7D8;
             font-size: 22px;
             border-radius: 12px;
-            padding: 12px;
-            margin: 10px 0;
+            padding: 8px;
         }
 
         #color-display:hover {
@@ -89,7 +88,7 @@
             justify-content: center;
             align-items: center;
             margin-bottom: 20px;
-            padding: 12px;
+            padding: 8px;
         }
 
         .color-picker input {
@@ -203,16 +202,15 @@
 
 <body>
     <div class="header">
-        <h2>
-            <h2><span style="color: white;">IYR</span></h2>
-            <div class="menu">
-                <a href="index.html">
-                    Home</a>
-                <a href="Couleurs And Code.html">Color
-                    And Code Hex</a><br>
-                <a href="Calculator.html">
-                    Calculator</a>
-            </div>
+        <img id="imgh2" src="IYR1.webp" alt="IYR(Apk,Color,Calc)logo" title="IYR(Apk,Color,Calc)">
+        <div class="menu">
+            <a href="index.html">
+                Home</a>
+            <a href="Couleurs And Code.html">Color
+                And Code Hex</a><br>
+            <a href="Calculator.html">
+                Calculator</a>
+        </div>
     </div>
     <div class="heading">
         <div>
