--- a/Calculator.html
+++ b/Calculator.html
@@ -107,16 +107,15 @@
 
 <body>
     <div class="header">
-        <h2>
-            <h2><span style="color: white;">IYR</span></h2>
-            <div class="menu">
-                <a href="index.html">
-                    Home</a>
-                <a href="Couleurs And Code.html">Color
-                    And Code Hex</a><br>
-                <a href="Calculator.html">
-                    Calculator</a>
-            </div>
+        <img id="imgh2" src="IYR1.webp" alt="IYR(Apk,Color,Calc)logo" title="IYR(Apk,Color,Calc)">
+        <div class="menu">
+            <a href="index.html">
+                Home</a>
+            <a href="Couleurs And Code.html">Color
+                And Code Hex</a><br>
+            <a href="Calculator.html">
+                Calculator</a>
+        </div>
     </div>
     <div class="calculatrice">
         <input type="text" id="display" name="display" readonly>
