--- a/index.html
+++ b/index.html
@@ -297,6 +297,26 @@
                     <h1>Lossless Scaling</h1>
                 </div>
             </div>
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/10feYHsiI26xruBY4HtuMYk8c0xjvF9Y9/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="MinerSeeker.webp" alt="LogoIYR8" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
+                </div>
+                <div class="app-name">
+                    <h1>MinerSeeker</h1>
+                </div>
+            </div>
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/1DPYopT-20hpDOpSKzevQr8tJDOe6VV4p/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="RollerCoaster.webp" alt="LogoIYR9" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
+                </div>
+                <div class="app-name">
+                    <h1>RollerCoaster</h1>
+                </div>
+            </div>
         </div>
     </div>
 </body>
