Stick Soldiers Old

--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1DQKPq2eJuIZsgwke44dnfgfHcoWHHO2P/view?usp=drive_link';">
+                onclick="window.location.href='https://drive.google.com/file/d/1swC3bq_trK0Z9jckNQF4LDGqIkNib4Po/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="ColorHex.webp" alt="LogoIYR3" width="100px" height="100px"
+                    <img src="ColorFusion.webp" alt="LogoIYR3" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
-                    <h1>ColorHex</h1>
+                    <h1>ColorFusion</h1>
                 </div>
             </div>
             <div class="app-info"
@@ -315,6 +315,16 @@
                 </div>
                 <div class="app-name">
                     <h1>RollerCoaster</h1>
+                </div>
+            </div>
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/1hzq9YpykRWMVJ4pEl4yqotJsLP5GKYrf/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="Stick Soldiers II.webp" alt="LogoIYR10" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
+                </div>
+                <div class="app-name">
+                    <h1>Stick Soldiers II</h1>
                 </div>
             </div>
         </div>
