--- a/index.html
+++ b/index.html
@@ -308,13 +308,13 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1DPYopT-20hpDOpSKzevQr8tJDOe6VV4p/view?usp=drive_link';">
+                onclick="window.location.href='https://drive.google.com/file/d/1v8BoCE8TcGb2iUj3ajsuqXKQzgYUEnLi/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="RollerCoaster.webp" alt="LogoIYR9" width="100px" height="100px"
+                    <img src="Stick Vetrea.webp" alt="LogoIYR9" width="100px" height="100px"
                         onerror="this.onerror=null; this.src='EmptyApp.svg';">
                 </div>
                 <div class="app-name">
-                    <h1>RollerCoaster</h1>
+                    <h1>Stick Vetrea</h1>
                 </div>
             </div>
             <div class="app-info"
