--- a/Calculator.html
+++ b/Calculator.html
@@ -9,7 +9,7 @@
         .calculatrice {
             margin: 3% auto;
             background-color: #EFEFF0;
-            border-radius: 12px;
+            border-radius: 10px;
             padding: 16px;
             width: 320px;
             text-align: center;
@@ -43,7 +43,7 @@
 
         .calculatrice input[type="button"]:hover,
         .calculatrice button:hover {
-            background-color: #D7D7D8;
+            background-color: #E0E0E1;
             transform: translateY(-2px);
         }
 
