--- a/Couleurs And Code.html
+++ b/Couleurs And Code.html
@@ -8,7 +8,7 @@
     <style>
         .heading {
             background-color: #EFEFF0;
-            border-radius: 12px;
+            border-radius: 10px;
             display: grid;
             width: 92%;
             margin: 20px auto;
@@ -19,9 +19,9 @@
         }
 
         #color-display {
-            background-color: #D7D7D8;
+            background-color: #E0E0E1;
             font-size: 22px;
-            border-radius: 12px;
+            border-radius: 10px;
             padding: 8px;
         }
 
@@ -31,7 +31,7 @@
 
         .Allcontent {
             background-color: #EFEFF0;
-            border-radius: 12px;
+            border-radius: 10px;
             justify-items: center;
             margin: 20px auto;
             padding: 20px;
@@ -44,8 +44,8 @@
         }
 
         .circle-name {
-            background-color: #D7D7D8;
-            border-radius: 12px;
+            background-color: #E0E0E1;
+            border-radius: 10px;
             margin: 4px;
             padding: 4px;
         }
@@ -82,8 +82,8 @@
         }
 
         .color-picker {
-            background-color: #D7D7D8;
-            border-radius: 12px;
+            background-color: #E0E0E1;
+            border-radius: 10px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -128,7 +128,7 @@
         }
 
         .picked-color {
-            background-color: #D7D7D8;
+            background-color: #E0E0E1;
             border-radius: 8px;
             display: flex;
             flex-direction: column;
