--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -12,7 +12,7 @@
 
         .all-circle {
             margin: 20px auto;
-            width: 85%;
+            width: 92%;
             padding: 20px;
             border-radius: 8px;
             background-color: #EFEFF0;
@@ -29,7 +29,7 @@
             text-align: center;
             font-weight: bolder;
             transition: 0.14s;
-            background-color: #D7D7D8;
+            background-color: #E0E0E1;
         }
 
         .circle:hover {
