--- a/index.html
+++ b/index.html
@@ -327,6 +327,26 @@
                     <h1>Stick Soldiers II</h1>
                 </div>
             </div>
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/1y7z1ZgyvG69iXdT1sNAP-KVCcxCVgq6B/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="Pac-Man.webp" alt="LogoIYR10" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
+                </div>
+                <div class="app-name">
+                    <h1>Pac-Man</h1>
+                </div>
+            </div>
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/1oSSasfPpB616Hp7PYMJlntEaJhQl8dKP/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="GhostIP.webp" alt="LogoIYR10" width="100px" height="100px"
+                        onerror="this.onerror=null; this.src='EmptyApp.svg';">
+                </div>
+                <div class="app-name">
+                    <h1>GhostIP</h1>
+                </div>
+            </div>
         </div>
     </div>
 </body>
